<resources>
    <string name="appName">Family Map</string>

    <!-- Login Fragment -->
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="registerUnsuccessfulToast">Error: Register unsuccessful.</string>
    <string name="signInUnsuccessfulToast">Error: Sign in unsuccessful.</string>

    <!-- Map Fragment -->
    <string name="clickToSeeDetails">Click on a marker to see event details</string>
    <string name="eventDetails">%s %s\n%S: %s, %s (%d)</string>
    <string name="connectionsError">An error occurred while getting connections.</string>
    <string name="searchItem">Search</string>
    <string name="settingsItem">Settings</string>

    <!-- Settings Activity -->
    <string name="lifeStoryLinesTitle">Life Story Lines</string>
    <string name="showLifeStoryLines">SHOW LIFE STORY LINES</string>
    <string name="familyTreeLinesTitle">Family Tree Lines</string>
    <string name="showFamilyTreeLines">SHOW FAMILY TREE LINES</string>
    <string name="spouseLinesTitle">Spouse Lines</string>
    <string name="showSpouseLines">SHOW SPOUSE LINES</string>
    <string name="fathersSideTitle">Father\'s Side</string>
    <string name="showFathersSide">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mothersSideTitle">Mother\'s Side</string>
    <string name="showMothersSide">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="maleEventsTitle">Male Events</string>
    <string name="femaleEventsTitle">Female Events</string>
    <string name="showGenderEvents">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logoutDescription">RETURN TO LOGIN SCREEN</string>
    <string name="settingsError">An error occurred while applying new filters.</string>

    <!-- Search Activity -->
    <string name="searchError">An error occurred while searching persons and events.</string>

    <!-- Person Activity -->
    <string name="personFirstName">First Name</string>
    <string name="personLastName">Last Name</string>
    <string name="personGender">Gender</string>
    <string name="personLifeEvents">LIFE EVENTS</string>
    <string name="personFamily">FAMILY</string>
    <string name="personFather">Father</string>
    <string name="personMother">Mother</string>
    <string name="personSpouse">Spouse</string>
    <string name="personChild">Child</string>
    <string name="personDetailsError">An error occurred while getting person details.</string>
</resources>