<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:stretchColumns="1"
        tools:context=".fragments.LoginFragment">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/serverHost" />

            <EditText
                android:id="@+id/serverHostField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:text="10.0.2.2" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/serverPort" />
            <EditText
                android:id="@+id/serverPortField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:text="8080" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/username" />
            <EditText
                android:id="@+id/usernameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                tools:text="jane" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/password" />
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:text="jane" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/firstName" />
            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                tools:text="Jane" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/lastName" />
            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                tools:text="Smith" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:text="@string/email" />
            <EditText
                android:id="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:text="jane@gmail.com" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />
                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/signIn" />
            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/register" />
        </LinearLayout>
    </TableLayout>
</ScrollView>
